<resources>
    <string name="app_name">Money Mana</string>
    <string name="camera_access_denyded_text">Для полноценной работы приложения необходимо разрешение на использовании камеры</string>
    <string name="add_category_name">Название категории</string>
    <string name="add_total_amount_name">Общий бюджет</string>
    <string name="set_revert_period">День рестарта</string>
    <string name="set_limit">Денежный лимит</string>
    <string name="save">Сохранить</string>
    <string name="sum_remained">остаток: %d</string>
    <string name="overrun_sum">перерасход: %d</string>
    <string name="budget_settings">%d ₽\n%d дней</string>
    <string name="check_amount">Сумма чека</string>
    <string name="date">Дата</string>
    <string name="error_name_category">Категория не найдена</string>
</resources>